--- a/faith.html
+++ b/faith.html
@@ -20,7 +20,7 @@
 .fc-card .fc-detail{margin-top:1rem;font-size:.7rem;font-weight:600;letter-spacing:.08em;text-transform:uppercase;color:var(--lid-green)}
 .fc-steps{display:grid;grid-template-columns:repeat(4,1fr);gap:1.5rem;margin-top:2.5rem;text-align:center}
 .fc-step{position:relative}
-.fc-step-num{width:48px;height:48px;border-radius:50%;background:var(--lid-green);color:var(--white);font-family:'Cormorant Garamond',serif;font-size:1.3rem;display:flex;align-items:center;justify-content:center;margin:0 auto 1rem}
+.fc-step-num{width:48px;height:48px;border-radius:50%;background:var(--lid-green);color:var(--white);font-family:'Cormorant Garamond',serif;font-size:1.3rem;font-weight:400;display:flex;align-items:center;justify-content:center;margin:0 auto 1rem;line-height:1;padding-top:4px}
 .fc-step h4{font-family:'Cormorant Garamond',serif;font-size:1.1rem;font-weight:500;color:var(--text-dark);margin-bottom:.5rem}
 .fc-step p{font-size:.8rem;line-height:1.5;color:var(--text-mid)}
 .fc-testimonials{display:grid;grid-template-columns:repeat(2,1fr);gap:1.5rem;margin-top:2.5rem}
@@ -48,7 +48,7 @@
 .fc-scripture{max-width:600px;margin:2.5rem auto 0;text-align:center;padding:2rem;border-left:3px solid var(--warm-gold);background:rgba(200,164,94,.04);border-radius:0 4px 4px 0}
 .fc-scripture p{font-family:'Cormorant Garamond',serif;font-size:1.2rem;font-style:italic;color:var(--text-dark);line-height:1.5}
 .fc-scripture cite{display:block;margin-top:.75rem;font-family:'DM Sans',sans-serif;font-size:.75rem;font-style:normal;font-weight:600;color:var(--warm-gold)}
-@media(max-width:768px){.fc-programs,.fc-testimonials{grid-template-columns:1fr}.fc-steps{grid-template-columns:repeat(2,1fr)}.fc-form .form-row{grid-template-columns:1fr}}
+@media(max-width:768px){.fc-programs,.fc-testimonials{grid-template-columns:1fr}.fc-steps{grid-template-columns:1fr}.fc-form .form-row{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
