--- a/resources.html
+++ b/resources.html
@@ -143,7 +143,7 @@
 .comment-form input:focus,.comment-form textarea:focus{border-color:var(--lid-green)}
 .comment-form button{margin-top:.75rem;padding:.6rem 1.5rem;background:var(--lid-green);color:var(--white);border:none;border-radius:2px;font-family:'DM Sans',sans-serif;font-size:.75rem;font-weight:600;letter-spacing:.08em;text-transform:uppercase;cursor:pointer;transition:background .3s}
 .comment-form button:hover{background:var(--lid-green-light)}
-@media(max-width:768px){.res-tabs{flex-direction:column}.resource-grid,.community-grid{grid-template-columns:1fr}.pillar-name{width:120px;font-size:.75rem}}
+@media(max-width:768px){.res-tabs{flex-direction:column}.resource-grid,.community-grid{grid-template-columns:1fr}.pillar-name{width:120px;font-size:.75rem}.new-thread-form{padding:1.25rem}.new-thread-form h4{font-size:1rem}.thread-card{padding:1.25rem}.thread-view-header h3{font-size:1.2rem}.comment-form{padding:1rem}.forum-detail-header h2{font-size:1.5rem}.assessment-card{padding:1.5rem}.score-ring{width:100px;height:100px}.pillar-bars{gap:.5rem}.section-title{font-size:1.5rem!important}}
   </style>
 </head>
 <body>
