--- a/help.html
+++ b/help.html
@@ -73,7 +73,7 @@
     <div class="container" style="text-align: center;">
       <div class="section-label">Immediate Resources</div>
       <div class="section-title">Crisis Helplines: Free &amp; Confidential</div>
-      <div class="pillars-grid" style="margin-top: 2rem; grid-template-columns: repeat(3, 1fr);">
+      <div class="pillars-grid" style="margin-top: 2rem; ">
         <div class="pillar-card" style="text-align: center;">
           <h3>Suicide &amp; Crisis Lifeline</h3>
           <p>Call or text <strong>988</strong><br>Available 24/7, free and confidential</p>
