--- a/partners.html
+++ b/partners.html
@@ -48,7 +48,8 @@
 .testimonial-block{max-width:700px;margin:2.5rem auto 0;text-align:center;padding:2.5rem;background:var(--white);border-radius:4px;border:1px solid rgba(42,37,32,.06)}
 .testimonial-block blockquote{font-family:'Cormorant Garamond',serif;font-size:1.3rem;font-style:italic;color:var(--text-dark);line-height:1.5;margin:0}
 .testimonial-block cite{display:block;margin-top:1rem;font-family:'DM Sans',sans-serif;font-size:.8rem;font-style:normal;font-weight:600;color:var(--lid-green)}
-@media(max-width:768px){.partner-tiers,.partner-ways{grid-template-columns:1fr}.impact-grid{grid-template-columns:repeat(2,1fr)}.partner-form .form-row{grid-template-columns:1fr}}
+@media(max-width:768px){.partner-tiers,.partner-ways{grid-template-columns:1fr}.impact-grid{grid-template-columns:repeat(2,1fr)}.partner-form .form-row{grid-template-columns:1fr}.testimonial-block{padding:1.5rem}.testimonial-block blockquote{font-size:1.1rem}}
+@media(max-width:480px){.impact-grid{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
