--- a/contact.html
+++ b/contact.html
@@ -66,15 +66,17 @@
             </div>
           </div>
         <div class="contact-form-wrap">
-          <div class="contact-form">
+          <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
+            <input type="hidden" name="form-name" value="contact">
+            <p class="hidden" style="display:none;"><label>Don't fill this out: <input name="bot-field"></label></p>
             <div class="form-row">
               <div class="form-group">
                 <label for="firstName">First Name</label>
-                <input type="text" id="firstName" name="firstName" placeholder="Your first name">
+                <input type="text" id="firstName" name="firstName" placeholder="Your first name" required>
               </div>
               <div class="form-group">
                 <label for="lastName">Last Name</label>
-                <input type="text" id="lastName" name="lastName" placeholder="Your last name">
+                <input type="text" id="lastName" name="lastName" placeholder="Your last name" required>
               </div>
             </div>
             <div class="form-group">
@@ -83,10 +85,10 @@
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea id="message" name="message" rows="5" placeholder="How can we help?"></textarea>
+              <textarea id="message" name="message" rows="5" placeholder="How can we help?" required></textarea>
             </div>
-            <button type="button" class="btn-primary" style="width: 100%;">Send Message</button>
-          </div>
+            <button type="submit" class="btn-primary" style="width: 100%;">Send Message</button>
+          </form>
         </div>
       </div>
     </div>
@@ -137,10 +139,10 @@
   <section class="newsletter">
     <h3>Stay Connected to the Light</h3>
     <p>Mental health insights, community stories, and program updates, delivered with care.</p>
-    <div class="newsletter-form">
-      <input type="email" placeholder="Your email address" aria-label="Email address">
-      <button type="button">Subscribe</button>
-    </div>
+    <form name="newsletter" method="POST" data-netlify="true" class="newsletter-form"><input type="hidden" name="form-name" value="newsletter">
+      <input type="email" name="email" placeholder="Your email address" aria-label="Email address" required>
+      <button type="submit">Subscribe</button>
+    </form>
   </section>
 
 </main>
