--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             </div>
           </div>
         <div class="contact-form-wrap">
-          <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="contact-form">
+          <form name="contact" method="POST" data-netlify="true" action="/thank-you.html" netlify-honeypot="bot-field" class="contact-form">
             <input type="hidden" name="form-name" value="contact">
             <p class="hidden" style="display:none;"><label>Don't fill this out: <input name="bot-field"></label></p>
             <div class="form-row">
