--- a/faith.html
+++ b/faith.html
@@ -224,7 +224,7 @@
 
   <section class="section section-dark">
     <div class="container">
-      <form name="faith-community" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="fc-form">
+      <form name="faith-community" method="POST" data-netlify="true" action="/thank-you.html" netlify-honeypot="bot-field" class="fc-form">
         <input type="hidden" name="form-name" value="faith-community">
         <p style="display:none;"><label>Don't fill this out: <input name="bot-field"></label></p>
         <h3>Bring LID to Your Church</h3>
