--- a/partners.html
+++ b/partners.html
@@ -176,7 +176,7 @@
 
   <section class="section section-dark">
     <div class="container">
-      <form name="partnership" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="partner-form">
+      <form name="partnership" method="POST" data-netlify="true" action="/thank-you.html" netlify-honeypot="bot-field" class="partner-form">
         <input type="hidden" name="form-name" value="partnership">
         <p style="display:none;"><label>Don't fill this out: <input name="bot-field"></label></p>
         <h3>Start a Partnership Conversation</h3>
