--- a/volunteer.html
+++ b/volunteer.html
@@ -121,7 +121,7 @@
 
   <section class="section section-warm">
     <div class="container">
-      <form name="volunteer" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="vol-form">
+      <form name="volunteer" method="POST" data-netlify="true" action="/thank-you.html" netlify-honeypot="bot-field" class="vol-form">
         <input type="hidden" name="form-name" value="volunteer">
         <p style="display:none;"><label>Don't fill this out: <input name="bot-field"></label></p>
         <h3>Apply to Volunteer</h3>
