--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <meta name="description" content="Learn about Life in Darkness, our founder, our convictions, and our partnership with EQGenix Inc.">
   <title>About | Life in Darkness</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -125,8 +128,8 @@
             <div class="method-feature">
               <div class="method-feature-icon">&#9670;</div>
               <div class="method-feature-text">
-                <h4>Grit to Genius Youth Curriculum</h4>
-                <p>Identity, resilience, and emotional intelligence development for ages 10 to 18.</p>
+                <h4>Brave Foundations Youth Program</h4>
+                <p>Youth resiliency workshops building emotional strength, self-awareness, and confidence for ages 10 to 18.</p>
               </div>
             </div>
           </div>
