--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <meta name="description" content="Life in Darkness is an independent 501(c)(3) nonprofit delivering evidence-based programs for grief recovery, youth resiliency, family healing, and crisis intervention.">
   <title>Life in Darkness | Be the Light in Someone's Darkest Moment</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -147,7 +150,7 @@
       <div class="donate-tiers">
         <a href="https://secure.qgiv.com/for/lifeindarkness" target="_blank" rel="noopener" class="donate-tier">
           <div class="donate-amount">$50</div>
-          <div class="donate-impact">Sponsors one youth through a full week of the Grit to Genius resiliency program.</div>
+          <div class="donate-impact">Sponsors one youth through a full week of our Brave Foundations resiliency program.</div>
         </a>
         <a href="https://secure.qgiv.com/for/lifeindarkness" target="_blank" rel="noopener" class="donate-tier featured">
           <div class="donate-amount">$250</div>
