--- a/programs.html
+++ b/programs.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <meta name="description" content="Life in Darkness offers five evidence-based programs: suicide prevention, grief recovery, family healing, youth resiliency, and addiction support — all free and confidential.">
   <title>Our Programs | Life in Darkness</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -127,8 +130,8 @@
       <p class="section-desc" style="max-width:650px;margin-left:auto;margin-right:auto;">Identity-building, emotional skill development, and courage cultivation for young people ages 10–18. We grow capacity, not just coping mechanisms — preparing the next generation to lead with resilience.</p>
       <div class="pillars-grid" style="margin-top: 2.5rem;">
         <div class="pillar-card">
-          <h3>Grit to Genius&trade;</h3>
-          <p>A K–12 curriculum that builds cognitive sovereignty, emotional regulation, and effort tolerance through structured, age-appropriate modules. Available in both secular and faith-integrated versions.</p>
+          <h3>Brave Foundations</h3>
+          <p>A youth resiliency program that helps young people ages 10–18 build emotional strength, self-awareness, and confidence through structured group workshops. Covers identity, decision-making, healthy relationships, and navigating pressure in a digital world.</p>
         </div>
         <div class="pillar-card">
           <h3>Identity &amp; Character Building</h3>
