--- a/thank-you.html
+++ b/thank-you.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <meta name="description" content="Thank you for reaching out to Life in Darkness.">
   <title>Thank You | Life in Darkness</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
